--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
   </developers>
 
   <scm>
-    <connection>scm:git:git@github.com:h3llborn/openmrs-devel-module-archetype.git</connection>
-    <developerConnection>scm:git:git@github.com:h3llborn/openmrs-devel-module-archetype.git</developerConnection>
-    <url>scm:git:git@github.com:h3llborn/openmrs-devel-module-archetype.git</url>
+    <connection>scm:git:git@github.com/openmrs/openmrs-maven-archetype-project.git</connection>
+    <developerConnection>scm:git:git@github.com/openmrs/openmrs-maven-archetype-project.git</developerConnection>
+    <url>scm:git:git@github.com/openmrs/openmrs-maven-archetype-project.git</url>
   </scm>
 </project>
