--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -22,9 +22,9 @@
 	</organization>
 
 	<scm>
-		<connection>scm:git:git@github.com:h3llborn/openmrs-devel-module-archetype.git</connection>
-		<developerConnection>scm:git:git@github.com:h3llborn/openmrs-devel-module-archetype.git</developerConnection>
-		<url>scm:git:git@github.com:h3llborn/openmrs-devel-module-archetype.git</url>
+	<connection>scm:git:git@github.com/openmrs/openmrs-maven-archetype-project.git</connection>
+    <developerConnection>scm:git:git@github.com/openmrs/openmrs-maven-archetype-project.git</developerConnection>
+    <url>scm:git:git@github.com/openmrs/openmrs-maven-archetype-project.git</url>
 	</scm>
 
 	<properties>
@@ -77,7 +77,32 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
+			<!--
+            Copy all of the modules we depend on (this also gets extra jars we don't need).
+            We'll end up with things like "reporting-omod-0.7.2.1.jar".
+            -->
+			 <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>{project.basedir}/openmrs-${openMRSVersion}/modules</outputDirectory>
+                            <!-- the event module has the non-standard groupId org.openmrs -->
+                            <includeGroupIds>org.openmrs.module,org.openmrs</includeGroupIds>
+                            <excludeTransitive>true</excludeTransitive>
+                        </configuration>
+                    </execution>
+
+                </executions>
+            </plugin>
 			<!-- 
 			
 			We'll configure tomcat7-maven-plugin later down the road to produce a standalone with war and all omods.
@@ -125,6 +150,10 @@
 						<systemProperty>
 							<name>installation.script</name>
 							<value>installation.h2.properties</value>
+						</systemProperty>
+						<systemProperty>
+							<name>OPENMRS_APPLICATION_DATA_DIRECTORY</name>
+							<value>${project.basedir}/openmrs-${openMRSVersion}/</value>
 						</systemProperty>
 					</systemProperties>
 				</configuration>
