--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -66,7 +66,7 @@
 									<destFileName>logic-${logicModuleVersion}.omod</destFileName>
 								</artifactItem>
 							</artifactItems>
-							<outputDirectory>{project.basedir}/openmrs-${openMRSVersion}/modules</outputDirectory>
+							<outputDirectory>${project.basedir}/openmrs/${openMRSVersion}/modules</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
