--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,10 @@
       <name>h3llborn</name>
     </developer>
   </developers>
+  <scm>
+    <connection>scm:git:git@github.com:openmrs/openmrs-maven-archetype-project.git</connection>
++-  <developerConnection>scm:git:git@github.com:openmrs/openmrs-maven-archetype-project.git</developerConnection>
++-  <url>scm:git:git@github.com:openmrs/openmrs-maven-archetype-project.git</url>
++-</scm>
 
 </project>
