SDK-6: Project archetype adjustments

--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>${artifactId}</artifactId>
 	<version>${version}</version>
 	<packaging>pom</packaging>
-	<name>Module Development Archetype</name>
+	<name>OpenMRS Project Archetype</name>
 	<description>Archetype and scripts used for module development</description>
 	<url>https://wiki.openmrs.org/x/rwBkAg</url>
 	
