--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.openmrs.sdk</groupId>
-  <artifactId>devel-module-archetype-archetype</artifactId>
-  <version>1.0</version>
+  <groupId>org.openmrs.maven.archetypes</groupId>
+  <artifactId>maven-archetype-openmrs-project</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
 
-  <name>devel-module-archetype-archetype</name>
+  <name>OpenMRS Project Archetype</name>
 
   <build>
     <extensions>
