--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>${groupId}</groupId>
@@ -9,7 +10,7 @@
 	<name>OpenMRS Project</name>
 	<description>Defines OpenMRS configuration for module development</description>
 	<url>https://wiki.openmrs.org/x/rwBkAg</url>
-	
+
 	<organization>
 		<name>OpenMRS</name>
 		<url>http://openmrs.org</url>
@@ -18,7 +19,11 @@
 	<properties>
 		<openMRSVersion>1.9.4-SNAPSHOT</openMRSVersion>
 		<h2Version>1.2.135</h2Version>
-    </properties>
+	</properties>
+
+	<modules>
+		<module>server</module>
+	</modules>
 
 	<build>
 		<plugins>
@@ -28,11 +33,7 @@
 				<version>2.8</version>
 				<executions>
 					<execution>
-						<id>copy</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
+						<id>deploy-to-server</id>
 						<configuration>
 							<artifactItems>
 								<artifactItem>
@@ -40,7 +41,7 @@
 									<artifactId>openmrs-webapp</artifactId>
 									<version>${openMRSVersion}</version>
 									<type>war</type>
-								    <outputDirectory>${project.basedir}/openmrs/${openMRSVersion}</outputDirectory>
+									<outputDirectory>${project.basedir}/openmrs/${openMRSVersion}</outputDirectory>
 									<destFileName>openmrs-${openMRSVersion}.war</destFileName>
 								</artifactItem>
 								<artifactItem>
@@ -57,84 +58,18 @@
 					</execution>
 				</executions>
 			</plugin>
-
-			<!-- 
-			
-			We'll configure tomcat7-maven-plugin later down the road to produce a standalone with war and all omods.
-			
-			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.1</version>
-				<executions>
-					<execution>
-						<id>tomcat-exec-war</id>
-						<goals>
-							<goal>exec-war-only</goal>
-						</goals>
-						<phase>package</phase>
-						<configuration>
-							<warRunDependencies>
-								<warRunDependency>
-									<dependency>
-										<groupId>org.openmrs.web</groupId>
-										<artifactId>openmrs-webapp</artifactId>
-										<version>${openMRSVersion}</version>
-										<type>war</type>
-									</dependency>
-									<contextPath>/openmrs</contextPath>
-								</warRunDependency>
-							</warRunDependencies>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			//-->
-			
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>9.0.4.v20130625</version>
-				<configuration>
-					<webApp>
-						<contextPath>/openmrs</contextPath>
-						<extraClasspath>${project.build.directory}/db/h2-${h2Version}.jar</extraClasspath>
-					</webApp>
-					<war>${project.basedir}/openmrs/${openMRSVersion}/openmrs-${openMRSVersion}.war</war>
-					<systemProperties>
-						<systemProperty>
-							<name>OPENMRS_INSTALLATION_SCRIPT</name>
-							<value>${openmrs_install_script}</value>
-						</systemProperty>
-						<systemProperty>
-							<name>OPENMRS_APPLICATION_DATA_DIRECTORY</name>
-							<value>${openmrs_app_data_dir}</value>
-						</systemProperty>
-					</systemProperties>
-				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>2.5</version>
 			</plugin>
 		</plugins>
-    </build>
-
-    <profiles>
-     <profile>
-            <id>install-h2</id>
-            <activation>
-      			<activeByDefault>true</activeByDefault>
-    		</activation>
-            <properties>
-                <openmrs_install_script>classpath:installation.h2.properties</openmrs_install_script>
-                <openmrs_app_data_dir>${project.basedir}/openmrs-${openMRSVersion}/</openmrs_app_data_dir>
-            </properties>
-        </profile>
-     <profile>
-            <id>install-wizard</id>
-            <properties>
-                <openmrs_install_script></openmrs_install_script>
-                <openmrs_app_data_dir>${project.basedir}/openmrs-${openMRSVersion}/</openmrs_app_data_dir>
-            </properties>
-        </profile>
-   </profiles>
+	</build>
 
 	<repositories>
 		<repository>
@@ -154,19 +89,18 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
-	
+
 	<distributionManagement>
 		<repository>
 			<id>openmrs-repo-modules</id>
 			<name>Modules</name>
 			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/modules/</url>
 		</repository>
-        <snapshotRepository>
-            <id>openmrs-repo-snapshots</id>
-            <name>OpenMRS Snapshots</name>
-            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/snapshots</url>
-        </snapshotRepository>
+		<snapshotRepository>
+			<id>openmrs-repo-snapshots</id>
+			<name>OpenMRS Snapshots</name>
+			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
 	</distributionManagement>
-	
 
 </project>
