--- a/pom.xml
+++ b/pom.xml
@@ -1,46 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.openmrs.maven.archetypes</groupId>
-  <artifactId>maven-archetype-openmrs-project</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <packaging>maven-archetype</packaging>
+	<groupId>org.openmrs.maven.archetypes</groupId>
+	<artifactId>maven-archetype-openmrs-project</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>maven-archetype</packaging>
+	<name>OpenMRS Project Archetype</name>
+	<description>Archetype and scripts used for module development</description>
+	<url>https://wiki.openmrs.org/x/rwBkAg</url>
 
-  <name>OpenMRS Project Archetype</name>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	
+	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.archetype</groupId>
+				<artifactId>archetype-packaging</artifactId>
+				<version>2.2</version>
+			</extension>
+		</extensions>
 
-  <build>
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.archetype</groupId>
-        <artifactId>archetype-packaging</artifactId>
-        <version>2.2</version>
-      </extension>
-    </extensions>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-archetype-plugin</artifactId>
+					<version>2.2</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <artifactId>maven-archetype-plugin</artifactId>
-          <version>2.2</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+	<developers>
+		<developer>
+			<name>h3llborn</name>
+		</developer>
+		<developer>
+			<name>Rafal Korytkowski</name>
+		</developer>
+	</developers>
 
-  <description>Archetype and scripts used for module development</description>
-
-  <url>https://wiki.openmrs.org/x/rwBkAg</url>
-
-  <developers>
-    <developer>
-      <name>h3llborn</name>
-    </developer>
-  </developers>
-  <scm>
-    <connection>scm:git:git@github.com:openmrs/openmrs-maven-archetype-project.git</connection>
-    <developerConnection>scm:git:git@github.com:openmrs/openmrs-maven-archetype-project.git</developerConnection>
-    <url>scm:git:git@github.com:openmrs/openmrs-maven-archetype-project.git</url>
-  </scm>
+	<scm>
+		<connection>scm:git:git@github.com:openmrs/openmrs-maven-archetype-project.git</connection>
+		<developerConnection>scm:git:git@github.com:openmrs/openmrs-maven-archetype-project.git</developerConnection>
+		<url>scm:git:git@github.com:openmrs/openmrs-maven-archetype-project.git</url>
+	</scm>
 
 </project>
