--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.openmrs.maven.archetypes</groupId>
 	<artifactId>maven-archetype-openmrs-project</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>maven-archetype</packaging>
 	<name>OpenMRS Project Archetype</name>
 	<description>Archetype and scripts used for module development</description>
