Updating repository URLs to HTTPS
For details on why this change is happening see this Talk post: https://talk.openmrs.org/t/maven-3-8-1-and-http-repositories/33364

If this commit causes issues, please feel free to revert

--- a/pom.xml
+++ b/pom.xml
@@ -52,12 +52,12 @@
 		<repository>
 			<id>openmrs-repo-releases</id>
 			<name>Releases</name>
-			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/releases</url>
+			<url>https://mavenrepo.openmrs.org/releases</url>
 		</repository>
 		<snapshotRepository>
 			<id>openmrs-repo-snapshots</id>
 			<name>Snapshots</name>
-			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/snapshots</url>
+			<url>https://mavenrepo.openmrs.org/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 
